metadata-classic/objects/WorkItem__c.object
<CustomObject>
    <fields>
        <fullName>ReportOutcome__c</fullName>
        <label>Report Outcome</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Refund - Fraud/Scam</fullName>
                </value>
                <value>
                    <fullName>Refund - Inappropriate</fullName>
                </value>
                <value>
                    <fullName>Refund - Other TOS violation</fullName>
                </value>
                <value>
                    <fullName>No Refund - Fraud/Scam</fullName>
                </value>
                <value>
                    <fullName>No Refund - Inappropriate</fullName>
                </value>
                <value>
                    <fullName>No Refund - Other TOS violation</fullName>
                </value>
                <value>
                    <fullName>Refund request (not scam or TOS violation)</fullName>
                </value>
                <value>
                    <fullName>Unresponsive customer</fullName>
                </value>
                <value>
                    <fullName>Customer support issue</fullName>
                </value>
                <value>
                    <fullName>MTS issue</fullName>
                </value>
                <value>
                    <fullName>Product feedback</fullName>
                </value>
                <value>
                    <fullName>TT feedback</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Accurate Report</fullName>
                    <isActive>false</isActive>
                    <label>Accurate Report</label>
                </value>
                <value>
                    <fullName>Inaccurate Report</fullName>
                    <isActive>false</isActive>
                    <label>Inaccurate Report</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RequestCategoryId__c</fullName>
        <label>Request Category Id</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RequestCount__c</fullName>
        <label>Request Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RequestId__c</fullName>
        <label>Request ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RequestingInSameArea__c</fullName>
        <label>Requesting in Same Area?</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>ThumbtackUserType__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ReviewAudit__c</fullName>
        <label>Review Audit</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Concerning behavior</fullName>
                </value>
                <value>
                    <fullName>Deposit no-show</fullName>
                </value>
                <value>
                    <fullName>General dissatisfaction</fullName>
                </value>
                <value>
                    <fullName>Inappropriate physical contact</fullName>
                </value>
                <value>
                    <fullName>Insufficient info</fullName>
                </value>
                <value>
                    <fullName>No-show (unpaid)</fullName>
                </value>
                <value>
                    <fullName>Pricing concerns</fullName>
                </value>
                <value>
                    <fullName>Property damage</fullName>
                </value>
                <value>
                    <fullName>Stolen property</fullName>
                </value>
                <value>
                    <fullName>Text &amp; rating don’t match</fullName>
                </value>
                <value>
                    <fullName>Threats of or actual physical harm</fullName>
                </value>
                <value>
                    <fullName>Unprofessional</fullName>
                </value>
                <value>
                    <fullName>Unresolved unsatisfactory work</fullName>
                </value>
                <value>
                    <fullName>Work not complete</fullName>
                </value>
                <value>
                    <fullName>Open MTS Incident</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ReviewIsAnonymous__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used to flag reviews that were submitted anonymously.</description>
        <label>Review Is Anonymous</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ReviewIsVerified__c</fullName>
        <description>If the Quote ID (bid_bid_id__c) is blank the review is unverified. If the Quote ID is not blank the review is verified.</description>
        <formula>IF(ISNULL(bid_bid_id__c), FALSE, TRUE)</formula>
        <inlineHelpText>If the Quote ID is blank the review is unverified. If the Quote ID is not blank the review is verified.</inlineHelpText>
        <label>Review Is Verified</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SendingSimilarMessages__c</fullName>
        <label>Sending Similar Messages?</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>ThumbtackUserType__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ServiceCategoryMatch__c</fullName>
        <inlineHelpText>Are the services/categories of the blacklisted account and the linked/matched account the same or similar?</inlineHelpText>
        <label>Service/Category Match</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>Status for work item</description>
        <inlineHelpText>Status for work item</inlineHelpText>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>Assigned</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SuppressAutomatedEmailMTSonly__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Field used by MTS agents to prevent the automated emails (workflows) from firing in special circumstances.</description>
        <label>Suppress Automated Email (MTS only)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TestGroup__c</fullName>
        <description>Field to contain information related to tests/experiments on Work Items.</description>
        <label>Test Group</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ThumbtackUserType__c</fullName>
        <label>Thumbtack User Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pro</fullName>
                </value>
                <value>
                    <fullName>Customer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TimeToCompleteInDays__c</fullName>
        <description>Formula to calculate the time it took to complete the work item, in days.</description>
        <formula>IF(ISPICKVAL(Status__c, &quot;Completed&quot;), (CompletedTS__c - CreatedDate),NULL)</formula>
        <label>Time to Complete (in Days)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TimeToCompleteInHours__c</fullName>
        <description>Formula to calculate the time it took to complete the work item.</description>
        <formula>IF(ISPICKVAL(Status__c, &quot;Completed&quot;), (CompletedTS__c - CreatedDate)*24,NULL)</formula>
        <label>Time to Complete (in Hours)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TimeWindow__c</fullName>
        <description>The time frame indicated on the request a call form.</description>
        <label>Time Window</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TimeZone__c</fullName>
        <description>Time zone as provided from the work item or request a call error form.</description>
        <label>Time Zone</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TopPro__c</fullName>
        <formula>ProAccount__r.TopPro__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Top Pro</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Banned Pro Re-entry</fullName>
                </value>
                <value>
                    <fullName>BGC Identity Mismatch</fullName>
                </value>
                <value>
                    <fullName>Chargeback Removal</fullName>
                </value>
                <value>
                    <fullName>Chargeback Warning</fullName>
                </value>
                <value>
                    <fullName>Customer Contact Dispute</fullName>
                </value>
                <value>
                    <fullName>Customer Payment Review</fullName>
                </value>
                <value>
                    <fullName>In Product Fraud Report</fullName>
                </value>
                <value>
                    <fullName>Low Quality to Remove</fullName>
                </value>
                <value>
                    <fullName>Messaging Verification</fullName>
                </value>
                <value>
                    <fullName>PA Request a Call Error</fullName>
                </value>
                <value>
                    <fullName>Review Message</fullName>
                </value>
                <value>
                    <fullName>Review Message for Spam</fullName>
                </value>
                <value>
                    <fullName>Verified Fake Reviews</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>WorkItemCreatedDateTime__c</fullName>
        <formula>CreatedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Work Item Created Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>bid_bid_id__c</fullName>
        <label>Quote Id</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>customer_email__c</fullName>
        <label>Customer Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>customer_first_name__c</fullName>
        <label>Customer First Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>customer_last_name__c</fullName>
        <label>Customer Last Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>pro_email__c</fullName>
        <label>Pro Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>pro_first_name__c</fullName>
        <label>Pro First Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>pro_last_name__c</fullName>
        <label>Pro Last Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>rca_name__c</fullName>
        <label>Request Category Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>rev_private_feedback_to_reviewed_user__c</fullName>
        <label>Review Private Feedback to Reviewed User</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>rev_private_feedback_to_thumbtack__c</fullName>
        <label>Review Private Feedback to Thumbtack</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>rev_rating__c</fullName>
        <label>Review Rating</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rev_response_text__c</fullName>
        <label>Review Response Text</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>rev_review_id__c</fullName>
        <externalId>true</externalId>
        <label>Review Id</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>rev_review_time__c</fullName>
        <label>Review Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>rev_text__c</fullName>
        <label>Review Text</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>rev_usr_user_id_reviewed__c</fullName>
        <label>User Id Reviewed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rev_usr_user_id_reviewer__c</fullName>
        <label>User Id Reviewer</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ticketid__c</fullName>
        <description>This is an external id set/used by external systems.</description>
        <externalId>true</externalId>
        <label>TicketId</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>usr_user_id__c</fullName>
        <description>External user ID field used for syncing done with Becquerel.</description>
        <externalId>true</externalId>
        <label>User ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Work Item</label>
    <listViews>
        <fullName>CS_In_Product_Fraud_Report</fullName>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>bid_bid_id__c</columns>
        <columns>RequestId__c</columns>
        <columns>usr_user_id__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Type__c</field>
            <operation>equals</operation>
            <value>In Product Fraud Report</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>WorkItem__c.StandardWorkItem</value>
        </filters>
        <label>CS - In Product Fraud Report</label>
        <sharedTo>
            <role>CSFrontlineUserTSL</role>
            <role>CSManagingUserTSL</role>
            <role>SystemLevelAccess</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ConcerningReviewsAssigned</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>ProAccount__c</columns>
        <columns>pro_first_name__c</columns>
        <columns>pro_last_name__c</columns>
        <columns>AdminLinkViewUser__c</columns>
        <columns>bid_bid_id__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>WorkItem__c.ConcerningReview</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Assigned</value>
        </filters>
        <filters>
            <field>Outcome__c</field>
            <operation>equals</operation>
        </filters>
        <label>Concerning Reviews - Assigned</label>
        <sharedTo>
            <role>MIManagingUser</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ConcerningReviewsPending</fullName>
        <columns>NAME</columns>
        <columns>CreatedDateTime__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>ProAccount__c</columns>
        <columns>pro_first_name__c</columns>
        <columns>pro_last_name__c</columns>
        <columns>AdminLinkViewUser__c</columns>
        <columns>bid_bid_id__c</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>WorkItem__c.ConcerningReview</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Assigned,Completed</value>
        </filters>
        <filters>
            <field>Outcome__c</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>OwnerIsQueue__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Concerning Reviews - Pending</label>
        <sharedTo>
            <role>MIManagingUser</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>CustomerContactDisputeWorkItems</fullName>
        <columns>NAME</columns>
        <columns>DisputeReason__c</columns>
        <columns>pro_email__c</columns>
        <columns>Type__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Type__c</field>
            <operation>equals</operation>
            <value>Customer Contact Dispute</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Assigned,Completed</value>
        </filters>
        <label>MTS - Customer Contact Dispute</label>
        <sharedTo>
            <roleAndSubordinatesInternal>CSManagingUserTPH</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>CSManagingUserTSL</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>LabsManagingUser</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>MIManagingUser</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>ProServicesManaging_User</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>SharedServicesUserTPH</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>SharedServicesUserTSL</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Customer_Payment_Review</fullName>
        <columns>NAME</columns>
        <columns>Type__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>AdminLinkViewUser__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Type__c</field>
            <operation>equals</operation>
            <value>Customer Payment Review</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Completed</value>
        </filters>
        <label>MTS - Customer Payment Review</label>
        <sharedTo>
            <roleAndSubordinatesInternal>MIManagingUser</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>MIBlacklistHits</fullName>
        <booleanFilter>1 AND 2 AND 3</booleanFilter>
        <columns>NAME</columns>
        <columns>usr_user_id__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>CREATED_DATE</columns>
        <columns>Email__c</columns>
        <columns>pro_first_name__c</columns>
        <columns>pro_last_name__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>ticketid__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>WorkItem__c.BlacklistedNumber</value>
        </filters>
        <filters>
            <field>BlacklistedNumberKnownDuplicate__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Assigned,Completed</value>
        </filters>
        <label>MTS - Blacklist Hits</label>
        <sharedTo>
            <group>TPHMIAssistants</group>
            <roleAndSubordinatesInternal>MIManagingUser</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>MIBlacklistHitsCompleted</fullName>
        <columns>Outcome__c</columns>
        <columns>Status__c</columns>
        <columns>NAME</columns>
        <columns>usr_user_id__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>CREATED_DATE</columns>
        <columns>Email__c</columns>
        <columns>pro_first_name__c</columns>
        <columns>pro_last_name__c</columns>
        <columns>ticketid__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>WorkItem__c.BlacklistedNumber</value>
        </filters>
        <filters>
            <field>BlacklistedNumberKnownDuplicate__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Completed,Assigned</value>
        </filters>
        <label>MTS - Blacklist Hits - Known Duplicates</label>
        <sharedTo>
            <group>TPHMIAssistants</group>
            <role>MIManagingUser</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>MIChargebacks</fullName>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>Type__c</columns>
        <columns>usr_user_id__c</columns>
        <columns>pro_first_name__c</columns>
        <columns>pro_last_name__c</columns>
        <columns>pro_email__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Type__c</field>
            <operation>equals</operation>
            <value>Chargeback warning,Chargeback removal</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Assigned,Completed</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>WorkItem__c.StandardWorkItem</value>
        </filters>
        <label>MTS - Chargebacks</label>
        <sharedTo>
            <roleAndSubordinatesInternal>MIManagingUser</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>MTSReviewMessageforSPAMAssigned</fullName>
        <columns>NAME</columns>
        <filterScope>Queue</filterScope>
        <label>MTS - Review Message for SPAM - Assigned</label>
        <queue>ReviewMessageforSPAM</queue>
        <sharedTo>
            <group>TPHMIAssistants</group>
            <roleAndSubordinates>MIManagingUser</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>MTSReviewMessageforSPAMCompleted</fullName>
        <columns>NAME</columns>
        <columns>usr_user_id__c</columns>
        <columns>BidId__c</columns>
        <columns>RequestId__c</columns>
        <columns>ticketid__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Type__c</field>
            <operation>equals</operation>
            <value>Review Message for Spam</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Completed</value>
        </filters>
        <label>MTS - Review Message for SPAM - Complete</label>
        <sharedTo>
            <group>TPHMIAssistants</group>
            <roleAndSubordinates>MIManagingUser</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>MTSReviewMessageforSPAMNew</fullName>
        <columns>NAME</columns>
        <columns>usr_user_id__c</columns>
        <columns>BidId__c</columns>
        <columns>RequestId__c</columns>
        <columns>ticketid__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Type__c</field>
            <operation>equals</operation>
            <value>Review Message for Spam</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>New</value>
        </filters>
        <label>MTS - Review Message for SPAM - New</label>
        <sharedTo>
            <group>TPHMIAssistants</group>
            <roleAndSubordinates>MIManagingUser</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>MTS_Customer_Focus_Concerning_Review</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>Outcome__c</columns>
        <columns>Status__c</columns>
        <columns>ProAccount__c</columns>
        <columns>pro_first_name__c</columns>
        <columns>pro_last_name__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>WorkItem__c.ConcerningReview</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Completed</value>
        </filters>
        <filters>
            <field>Outcome__c</field>
            <operation>equals</operation>
            <value>Email sent to customer</value>
        </filters>
        <label>MTS - Customer Focus Concerning Review</label>
        <sharedTo>
            <role>MIManagingUser</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>MTS_In_Product_Fraud_Report</fullName>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>bid_bid_id__c</columns>
        <columns>RequestId__c</columns>
        <columns>usr_user_id__c</columns>
        <filterScope>Queue</filterScope>
        <filters>
            <field>Type__c</field>
            <operation>equals</operation>
            <value>In Product Fraud Report</value>
        </filters>
        <filters>
            <field>ReportOutcome__c</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>WorkItem__c.StandardWorkItem</value>
        </filters>
        <label>MTS - In Product Fraud Report</label>
        <queue>ProactiveMIQueue</queue>
        <sharedTo>
            <role>SystemLevelAccess</role>
            <roleAndSubordinatesInternal>MIManagingUser</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>ProServicesManaging_User</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>MTS_Low_Quality_Reviews_to_Remove</fullName>
        <columns>NAME</columns>
        <columns>ReviewAudit__c</columns>
        <columns>ProAccount__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>rev_text__c</columns>
        <columns>rev_private_feedback_to_thumbtack__c</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Outcome__c</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>WorkItem__c.StandardWorkItem</value>
        </filters>
        <filters>
            <field>Type__c</field>
            <operation>equals</operation>
            <value>Low quality to remove</value>
        </filters>
        <label>MTS - Low Quality Reviews to Remove</label>
        <sharedTo>
            <group>TPHMIAssistants</group>
            <role>SharedServicesUserTPH</role>
            <roleAndSubordinatesInternal>MIManagingUser</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>MTS_Review_Message_for_Intent</fullName>
        <columns>NAME</columns>
        <columns>AdminLinkViewUser__c</columns>
        <columns>FullName__c</columns>
        <columns>Details__c</columns>
        <columns>Outcome__c</columns>
        <columns>Priority__c</columns>
        <filterScope>Queue</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>WorkItem__c.StandardWorkItem</value>
        </filters>
        <filters>
            <field>Type__c</field>
            <operation>equals</operation>
            <value>Review Message</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>New,Assigned</value>
        </filters>
        <filters>
            <field>Priority__c</field>
            <operation>equals</operation>
            <value>High,Medium</value>
        </filters>
        <label>MTS - Review Message for Intent</label>
        <queue>TPHSharedServices</queue>
        <sharedTo>
            <roleAndSubordinatesInternal>CustomerSuccessOrganization</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Work Items</pluralLabel>
    <recordTypes>
        <fullName>BlacklistedNumber</fullName>
        <active>true</active>
        <description>Matches for blacklisted numbers in messaging</description>
        <label>Blacklisted Number</label>
    </recordTypes>
    <recordTypes>
        <fullName>ConcerningReview</fullName>
        <active>true</active>
        <description>MI will review low rated review&apos;s to proactively help our customers and pro&apos;s.</description>
        <label>Concerning Review</label>
    </recordTypes>
    <recordTypes>
        <fullName>StandardWorkItem</fullName>
        <active>true</active>
        <description>Standard work item record type for various processes.</description>
        <label>Standard Work Item</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
</CustomObject>